# ci-cd

./: CMakeLists.txt  Dockerfile
.github/workflows/: ci-cd.yml
src/: main.cpp
tests/: test_main.cpp
